# zhangxifa

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
.qoder/repowiki/zh/content/: 容器化部署.md  数据持久化模块.md  日志系统.md  配置管理.md
.qoder/repowiki/zh/content/API 参考文档/: API 参考文档.md  业务逻辑 API.md
.qoder/repowiki/zh/content/API 参考文档/核心数据结构/: Socket 连接结构.md  消息头结构.md  点云数据结构.md
.qoder/repowiki/zh/content/API 参考文档/网络通信 API/: epoll 事件处理 API.md  连接池管理 API.md
.qoder/repowiki/zh/content/业务逻辑模块/: 业务逻辑模块.md  点云数据处理.md
.qoder/repowiki/zh/content/系统架构设计/: 组件交互机制.md
.qoder/repowiki/zh/content/系统架构设计/多进程架构设计/: 进程创建与管理.md  进程监控与恢复.md
.qoder/repowiki/zh/content/线程池系统/: 基础线程池.md  无锁线程池.md  镜像 ICP 线程池.md
.qoder/repowiki/zh/content/网络通信模块/: Socket 基础框架.md  安全防护机制.md  网络通信模块.md
.qoder/repowiki/zh/content/网络通信模块/epoll 事件系统/: epoll 事件系统.md  事件处理循环.md
.qoder/repowiki/zh/content/进程管理系统/: 多进程架构设计.md  进程监控与管理.md  进程管理系统.md
.qoder/repowiki/zh/content/项目概述/: 技术特色.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
app/: CMakeLists.txt  nginx.cxx  ngx_c_conf.cxx  ngx_log.cxx  ngx_printf.cxx  ngx_setproctitle.cxx
content/: svm_theory.md  工具和实用程序.md  开发指南.md  快速开始.md
content/API 参考文档/: 工具函数 API.md  数据库操作 API.md
content/API 参考文档/核心数据结构/: 核心数据结构.md  通信协议结构.md
content/API 参考文档/网络通信 API/: Socket 管理 API.md  数据收发 API.md  网络通信 API.md  连接生命周期 API.md
content/业务逻辑模块/: 协议实现.md  数据库集成.md  数据验证机制.md
content/点云处理算法/: 不对称性计算算法.md  点云处理算法.md  算法与 PCL 库集成.md  镜像 ICP 算法.md
content/系统架构设计/: 事件驱动架构.md  模块化设计架构.md  系统架构设计.md
content/系统架构设计/多进程架构设计/: 共享内存队列系统.md  多进程架构设计.md  负载均衡机制.md
content/线程池系统/: 不对称性计算线程池.md  持久化线程池.md  线程池系统.md
content/网络通信模块/: 时间队列管理.md  连接管理机制.md
content/网络通信模块/epoll 事件系统/: epoll 初始化和配置.md  事件处理器.md
content/进程管理系统/: 信号处理机制.md  守护进程实现.md
content/项目概述/: 快速开始.md  系统要求.md  项目介绍.md  项目概述.md
docker/: entrypoint.sh
include/: ngx_c_conf.h  ngx_c_crc32.h  ngx_c_lockmutex.h  ngx_c_memory.h  ngx_c_slogic.h  ngx_c_socket.h  ngx_c_threadpool.h  ngx_comm.h  ngx_func.h  ngx_global.h  ngx_hostByte_to_netByte.h  ngx_lockFreeQueue.h  ngx_lockfree_threadPool.h  ngx_logiccomm.h  ngx_macro.h  ngx_mysql_connection.h  ngx_mysql_connection_pool.h  ngx_shared_memory.h  public.h
logic/: CMakeLists.txt  ngx_c_slogic.cxx
misc/: CMakeLists.txt  ngx_c_crc32.cxx  ngx_c_memory.cxx  ngx_c_threadpool.cxx  ngx_lockfree_asymCal_threadPool.cxx  ngx_lockfree_mirrorICP_threadPool.cxx  ngx_lockfree_persistPool.cxx  ngx_lockfree_threadPool.cxx
net/: CMakeLists.txt  ngx_c_socket.cxx  ngx_c_socket_accept.cxx  ngx_c_socket_conn.cxx  ngx_c_socket_inet.cxx  ngx_c_socket_request.cxx  ngx_c_socket_time.cxx
persist/: CMakeLists.txt  mysql.ini  ngx_mysql_connection.cxx  ngx_mysql_connection_pool.cxx
pointServerReadMe/: readme.md
proc/: CMakeLists.txt  ngx_daemon.cxx  ngx_event.cxx  ngx_process_cycle.cxx
signal/: CMakeLists.txt  ngx_signal.cxx
